# bus-sign

./: .gitignore  Cargo.toml  README.md  example-mbta-response.json  example-worldtimeapi-response.json  mbta-proxy.py  rust-toolchain.toml  shell.nix
.cargo/: config.toml
src/: fetch.rs  lib.rs  main.rs  rtc.rs  timestamp.rs  universe.rs
