[package]
edition = "2021"
name = "bus-sign"
version = "0.1.0"
license = "MIT"
resolver = "2"

[dependencies]
cortex-m = { version = "0.7.6", features = ["critical-section-single-core" ] }
cortex-m-rt = "0.7.0"
cyw43 = { version = "0.1.0", features = ["defmt", "firmware-logs"] }
cyw43-pio = { version = "0.1.0", features = ["defmt", "overclock"] }
defmt = "0.3"
defmt-rtt = "0.3"
embassy-executor = { version = "0.5.0", features = [ "arch-cortex-m", "defmt", "executor-interrupt", "executor-thread", "integrated-timers", "nightly" ] }
embassy-futures = { version = "0.1.1" }
embassy-net = { version = "0.4.0", features = ["defmt", "dns", "tcp", "udp", "dhcpv4", "medium-ethernet"] }
embassy-rp = { version = "0.1.0", features = ["defmt", "unstable-pac", "time-driver"] }
embassy-sync = { version = "0.5.0", features = ["defmt"] }
embassy-time = { version = "0.3.0", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-usb-driver = { version = "0.1.0", features = ["defmt"] }
embassy-usb-logger = { version = "0.2.0" }
embedded-graphics = "0.7.1"
embedded-graphics-core = "0.3.3"
galactic-unicorn-embassy = { version = "0.5.0", git = "https://github.com/domneedham/pimoroni-unicorn-rs" }
heapless = { version = "0.8.0", features = ["defmt-03", "serde"] }
log = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }
pio = "0.2.1"
pio-proc = "0.2.2"
portable-atomic = { version = "1.5.1", features = ["critical-section"] }
rand = { version = "0.8.5", default-features = false }
rand_core = "0.6.4"
reqwless = { version = "0.12.1", default-features = false, features = ["defmt"] }
serde = { version = "1.0.203", default-features = false, features = ["derive"] }
serde-json-core = "0.5.1"
static_cell = { version = "2.1.0", features = ["nightly"] }
unicorn-graphics = { version = "0.2.1", git = "https://github.com/domneedham/pimoroni-unicorn-rs" }

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 1
overflow-checks = true
lto = "off"

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 's'
overflow-checks = true

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
